Updated index.html with new content.

--- a/index.html
+++ b/index.html
@@ -1,36 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAEC Practice Test</title>
-</head>
-<body>
-    <h1>Welcome to the WAEC Practice Test</h1>
-    <p>Select a subject to start practicing for your WAEC exams.</p>
-    <ul>
-        <li><a href="#maths">Mathematics</a></li>
-        <li><a href="#english">English Language</a></li>
-        <li><a href="#science">Science</a></li>
-    </ul>
-    <hr>
-    <h2 id="maths">Mathematics</h2>
-    <p>Here are some practice questions for Mathematics:</p>
-    <ol>
-        <li>What is 5 + 7?</li>
-        <li>Find the area of a circle with radius 5.</li>
-    </ol>
-    <h2 id="english">English Language</h2>
-    <p>Here are some practice questions for English:</p>
-    <ol>
-        <li>What is the synonym of "happy"?</li>
-        <li>Correct the sentence: "She go to the store.".</li>
-    </ol>
-    <h2 id="science">Science</h2>
-    <p>Here are some practice questions for Science:</p>
-    <ol>
-        <li>What is the chemical symbol for water?</li>
-        <li>What planet is known as the Red Planet?</li>
-    </ol>
-</body>
-</html>
+WAEC Practice Test — kbwaec with enhanced UI and security features
